# WareHouseDrone

./: .gitmodules  ReadME.md  output.csv
model/: Linear_model.pkl  NN_model.pkl  NN_model_XY_to_xy.pkl  NN_model_xyz_to_XY.pkl  arena_mapper.json  clean_data_generator.py  linear_model_x.pkl  mapper.py  model1.ipynb  model_pixelX.pkl  model_pixelY.pkl  model_whyconX_inverse.pkl  model_whyconY_inverse.pkl  output.csv  pixel2whycon_trainer.ipynb  pixel_scaler.pkl  pixel_to_x_model.pkl  pixel_to_xyz_model.pkl  pixel_to_y_model.pkl  pixel_to_z_model.pkl  pixel_values.txt  pro.py  scaler.pkl  trainer.ipynb  whycon2pixel_trainer.ipynb  xyz_to_pixelX_model.pkl  xyz_to_pixelY_model.pkl  xyz_to_pixel_model.pkl
swift_pico_hw/: CMakeLists.txt  package.xml
swift_pico_hw/launch/: task_4a.launch.py  task_4a_submission.launch.py  task_4b_submission.launch.py  task_4b_submission_py.launch.py  task_5b.launch.py  task_5b_submission_cpp.launch.py  task_5b_submission_py.launch.py
swift_pico_hw/scripts/: arena_mapper  arena_mapper.json  pixel_mapper.py
swift_pico_hw/scripts/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
swift_pico_hw/scripts/log/: latest_build
swift_pico_hw/src/: doom.py  linear_model_y.pkl  package_point.csv  path_planning_service.py  pico_client.py  pico_client_5.py  pico_controller-nolog.py  pico_controller.py  pico_server.py  pico_server_5.py  scaler_inverse.pkl  waypoint_service.py
swift_pico_hw/src/Final_WD_1284/: path_planning_service.py  pico_server_5.py
swift_testing/: CMakeLists.txt
test_folder/: path_planning_service.py  (+2 more)
(+4 files in other folders)
